syntax = "proto3";
import "Sha1Wire.proto";
option csharp_namespace = "SourceCode.Chasm.IO.Proto.Wire";

	// NodeKindWire
	enum NodeKindWire 
	{
		Blob = 0; // Default

		Tree = 1;
	}

	// TreeWireNode
	message TreeWireNode
	{
		string Name = 1;

		NodeKindWire Kind = 2;

		Sha1Wire NodeId = 3;
	}

	// TreeWire
	message TreeWire 
	{
		repeated TreeWireNode Nodes = 1;
	}
